# AgriSightAI

./: LICENSE  README.md  pyproject.toml  streamlit_app.py
src/agriculsight/: __init__.py  agriculsight_function.py  register.py
src/agriculsight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agriculsight/configs/: config.yml
src/agriculsight/tools/: __init__.py  image_processing.py  soil_analysis.py
